fixed spacing removed boarder

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
     /*navigation bar*/
     text-align: center;
     width: 100%;
-    height: 6vh;
+    height: 8vh;
     margin: 0px;
     background-color: rgba(0, 12, 182, 0.815);
 }
@@ -51,7 +51,7 @@
     left: 25vw;
     font-size: 50px;
     padding-top: 2vh;
-    border: 3px solid orange;
+    /*border: 3px solid orange;*/
     font-size: small;
 }
 
